# lab-01-ai-reasoning

./: .gitignore  README.md  SPEC.MD  SPEC.md  make_submission.sh  pom.xml  pyproject.toml
presentation/: presentation.tex
report/: report.tex
report/data/: benchmark.txt  benchmark_astar.txt  benchmark_deep_11_12.txt  benchmark_final.txt  benchmark_main.txt
specs/: 002-SPEC.MD
src/main/java/fr/dauphine/miage/ai/rubik/app/: Benchmark.java  BenchmarkStats.java
src/main/java/fr/dauphine/miage/ai/rubik/heuristic/: Heuristic.java  HeuristicCube.java  HeuristicLabel.java  ZeroHeuristic.java
src/main/java/fr/dauphine/miage/ai/rubik/model/: Color.java  Cube.java  CubeGeometry.java  Face.java  Move.java
src/main/java/fr/dauphine/miage/ai/rubik/search/: Astar.java  PriorityQueueState.java  State.java  StateSet.java
src/main/java/fr/dauphine/miage/ai/rubik/ui/: CubePanel.java  RubiksCubeSimulator.java
src/main/java/fr/dauphine/miage/ai/rubik/util/: Scrambler.java
src/rubik_solver/: astar.py  cube.py  heuristic.py  linkedList.py  priorityQueueState.py  rubiksCubeSimulator.py  searchSupport.py  simulator.py  state.py  stateSet.py
src/test/java/fr/dauphine/miage/ai/rubik/app/: BenchmarkStatsTest.java
src/test/java/fr/dauphine/miage/ai/rubik/heuristic/: HeuristicTest.java
src/test/java/fr/dauphine/miage/ai/rubik/model/: CubeTest.java
src/test/java/fr/dauphine/miage/ai/rubik/search/: AstarTest.java
